修改日志写入方式